LDEV-4425 Adding Portraits in Learner
Included in Grouping, Chat, Peer Review and QA

--- a/lams_tool_preview/web/includes/css/learning.scss
+++ b/lams_tool_preview/web/includes/css/learning.scss
@@ -7,7 +7,7 @@ textarea[id^=comment-textarea-] {
 	color: inherit !important;
 }
 
-td.username {min-width: 150px;}
+td.username {min-width: 150px;width: 25%}
 td.rating {width:150px;}
 td.comment {min-width: 250px;}
 .alert {padding:8px}
