--- a/lams_tool_chat/web/includes/css/chat.scss
+++ b/lams_tool_chat/web/includes/css/chat.scss
@@ -27,7 +27,7 @@
 	border-spacing: 10px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
 	#messages {
 		height: 100px;
 		resize: vertical;
@@ -39,7 +39,7 @@
 	
 }
 
-@media (min-width: 769px) {
+@media (min-width: 768px) {
 	#messages {
 		height: 200px;
 		resize: vertical;
@@ -54,15 +54,18 @@
 
 #roster {
 	height: 200px;
+	resize: vertical;
 	overflow: auto;
 	border: $border-thin-default;
 	padding: 2px;
 }
 
+#roster div {
+	margin-right: 5px; 
+}	
+
 #roster span {
-    display: inline-block;
-	margin-left: 5px;
-	font-weight: bold;
+    display: inline;
 	font-size: 14px;
     padding-top: 7px;
     vertical-align: top;
