--- a/lams_tool_chat/web/includes/css/chat_rtl.scss
+++ b/lams_tool_chat/web/includes/css/chat_rtl.scss
@@ -22,31 +22,50 @@
 	border-spacing: 10px;
 }
 
-#messages {
-	height: 260px;
-	overflow: auto;
-	border: $border-thin-default;
-	font-size: 14px;
-	padding: 2px;
-	padding-right:5px;
+@media (max-width: 768px) {
+	#messages {
+		height: 100px;
+		resize: vertical;
+		overflow: auto;
+		border: $border-thin-default;
+		padding: 2px;
+		padding-left:5px;
+	}
+	
+}
+
+@media (min-width: 769px) {
+	#messages {
+		height: 200px;
+		resize: vertical;
+		overflow: auto;
+		border: $border-thin-default;
+		padding: 2px;
+		padding-left:5px;
+	}
+
+  
 }
 
 #roster {
 	height: 200px;
+	resize: vertical;
 	overflow: auto;
 	border: $border-thin-default;
 	padding: 2px;
 }
 
+#roster div {
+	margin-right: 5px; 
+}	
+
 #roster span {
-    display: inline-block;
-	margin-left: 5px;
-	font-weight: bold;
+    display: inline;
 	font-size: 14px;
     padding-top: 7px;
     vertical-align: top;
 }
-
+	
 #sendMessageArea {
 	border: $border-thin-default;
 	width: 99%;
