LDEV-4423 Adding portraits to Monitor screens
Portraits incorporated into general monitor screens such as the 
email sending popup, journal viewing, grouping and learner 
progress. Also fixed issues in journal viewing relating to 
LDEV-4393.

--- a/lams_monitoring/web/css/_monitorLesson_base.scss
+++ b/lams_monitoring/web/css/_monitorLesson_base.scss
@@ -372,21 +372,8 @@ div#tabLearnersContainer {
 }
 
 td.progressBarLabel {
-	padding: 0;
-	background-color: $brand-primary-light;
+	line-height: 1 !important;
 }
-
-td.progressBarLabel div {
-	float: left;
-	padding: 10px 0 4px 20px;
-	font-weight: bold;
-}
-
-td.progressBarLabel a {
-	float: right;
-	margin: 6px 5px 4px 0;
-}
-
 
 /********** BOOTSTRAP ADDITIONS **********/
 
