--- a/lams_central/web/css/_learner_base.scss
+++ b/lams_central/web/css/_learner_base.scss
@@ -800,6 +800,23 @@ div.growlUI h1,div.growlUI h2 {
 	word-wrap: break-word;
 }
 
+// clickable panel created in CKEditor
+.lams-bootpanel .clickable {
+    cursor: pointer;
+}
+
+.lams-bootpanel .clickable .fa {
+    background: rgba(0, 0, 0, 0.15);
+    display: inline-block;
+    padding: 5px 7px;
+    border-radius: 4px;
+    margin-right: -7px;
+}
+
+.lams-bootpanel .panel-heading span {
+    margin-top: -20px;
+}
+
 // Image Gallery
 .caption-heading {
 	color: $brand-primary; 
