--- a/lams_central/web/ckeditor/plugins/bootsnippets/dialogs/snippets.css
+++ b/lams_central/web/ckeditor/plugins/bootsnippets/dialogs/snippets.css
@@ -11,15 +11,8 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 	width: 100%;
 	height: 568px;
 }
-.cke_dialog_contents_body {
-    padding-top: 10px;
-}
-#fakeId {
-	display: none;
-}
 
-.cke_tpl_item
-{
+.cke_tpl_item {
 	padding: 7px;
 	border-bottom: 1px solid rgba(128, 128, 128, 0.22);
 }
@@ -48,7 +41,7 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
     font-size: 16px;
 }
 .cke_dialog_contents {
-	background-color: #f3f3f3;
+	background-color: #f3f3f3 !important;
 }
 
 .cke_dialog_contents a:hover {
