--- a/lams_central/conf/scss/_bootstrap-variables.scss
+++ b/lams_central/conf/scss/_bootstrap-variables.scss
@@ -104,9 +104,9 @@ $font-size-small:         ceil(($font-size-base * 0.85)); // ~12px
 // $line-height-large:         1.3333333 // extra decimals for Win 8.1 Chrome
 // $line-height-small:         1.5
 
-// $border-radius-base:        4px
-// $border-radius-large:       6px
-// $border-radius-small:       3px
+$border-radius-base:        4px;
+$border-radius-large:       6px;
+$border-radius-small:       3px;
 
 //** Global color for active items (e.g., navs or dropdowns).
 // $component-active-color:    #fff
