LDEV-4455 Move burning question to the learning.jsp
We need a change in the flow for Burning questions in learner, so the
burning question text for each question is entered as the students
answer select the answers. 

So each question would have a "burning question?" label that would
expand/collapse on request for students to enter the text as they answer
each question.

--- a/lams_tool_scratchie/web/includes/css/scratchie-learning.scss
+++ b/lams_tool_scratchie/web/includes/css/scratchie-learning.scss
@@ -1,8 +1,7 @@
 @import "_lams_variables.scss";
 	
 #scratches {
-	margin: 40px 0px;
-	border-spacing: 0;
+	margin: 40px 0 15px;
 }
 
 #scratches tr td {
