--- a/lams_central/web/css/_learner_base.scss
+++ b/lams_central/web/css/_learner_base.scss
@@ -611,11 +611,6 @@ a.button-add-item:before {
 	nav.sidebar.slidesidemenu{
 		padding:10px 10px 10px 12px;
 	}
-	/*Hide text when compressed*/
-	nav.sidebar p{
-		padding-right: 35px;
-		text-align: center;
-	}
  
 	/* colour in top box to match panel heading */
 	nav.sidebar .navbar-nav > li:first-child{
@@ -645,7 +640,7 @@ a.button-add-item:before {
 		height: 100%;
 		margin-left: -135px;
 		float: left;
-		z-index: 8000;
+		z-index: 1000;
 		margin-top: 0px;
 		margin-bottom: 0px;
 	}
@@ -677,6 +672,33 @@ a.button-add-item:before {
 	
 }
 
+/*alter portrait for displaying it in collapsed pregress bar*/
+@media (min-width: 768px) and (max-width: 1329px) {
+	
+	nav.sidebar:not(.expandmenu) #navbar-portrait {
+		float: right;
+    		padding: 5px 0 0;
+	}
+
+	nav.sidebar:not(.expandmenu) #navbar-portrait img{
+		border: 4px solid whitesmoke;
+	}
+
+	nav.sidebar:not(.expandmenu) .portrait-generic-sm::before{
+		font-size: 30px;
+		margin-right: 3px;
+	}
+
+	nav.sidebar:not(.expandmenu) p{
+		padding-right: 35px;
+	}
+}
+
+/*in case when portrait is not shown in a progress bar - give extra space to hamburger button*/
+nav.sidebar p.no-portrait{
+	padding-right: 35px;
+}
+
 /* .....NavBar: Fully showing nav bar..... */
 
 @media (min-width: 1330px) {
@@ -698,6 +720,11 @@ a.button-add-item:before {
 	nav.sidebar .forAnimate{
 		opacity: 1;
 	}
+}
+
+/* center portrait */
+nav.sidebar .navbar-nav > li:first-child{
+	text-align: center;
 }
 
 nav.sidebar .navbar-nav .open .dropdown-menu>li>a:hover, nav.sidebar .navbar-nav .open .dropdown-menu>li>a:focus {
