--- a/lams_central/conf/scss/_bootstrap-variables.scss
+++ b/lams_central/conf/scss/_bootstrap-variables.scss
@@ -296,14 +296,14 @@ $screen-sm-min:              768px;
 // Medium screen / desktop
 //** Deprecated `$screen-md` as of v3.0.1
 // $screen-md:                  992px
-// $screen-md-min:              $screen-md
+$screen-md-min:              992px;
 //** Deprecated `$screen-desktop` as of v3.0.1
 // $screen-desktop:             $screen-md-min
 
 // Large screen / wide desktop
 //** Deprecated `$screen-lg` as of v3.0.1
 // $screen-lg:                  1200px
-// $screen-lg-min:              $screen-lg
+$screen-lg-min:              1200px;
 //** Deprecated `$screen-lg-desktop` as of v3.0.1
 // $screen-lg-desktop:          $screen-lg-min
 
