--- a/lams_central/web/css/orgGroup.scss
+++ b/lams_central/web/css/orgGroup.scss
@@ -27,8 +27,9 @@ div#titleDiv button {
 	margin-top: 7px;
 	border-bottom: $border-thin-dotted;
 }
+
 table#groupsTable {
-	height: calc(100% - 110px);
+	height: calc(100% - 280px);
 }
 table#groupsTable td {
 	vertical-align: top;
@@ -112,12 +113,23 @@ td#unassignedUserCell .userContainer {
     width: 100%;
     padding: 10px;
 }
+
+ #upload-group-file-settings {
+    display: inline-block;
+    width: 100%;
+    padding: 10px;
+    min-height: 150px; // allow a bit extra so the whole accordian is seen on iPad
+}
+
 #save-course-grouping-button {
 	margin-top: 10px;
 }
 #accordionAdvanced {
 	margin-bottom: 0px;
 	margin-top: 20px;
+}
+#accordionUploadGroupFile {
+	margin-bottom: 0px;
 }
 .dialogContainer {
     display: none;
