LDEV-4484 Print Grouping Page

--- a/lams_central/web/css/orgGroup.scss
+++ b/lams_central/web/css/orgGroup.scss
@@ -133,6 +133,11 @@ td#unassignedUserCell .userContainer {
     -webkit-overflow-scrolling: touch !important;
     overflow: auto;
 }
+
+#print-button {
+	color: $text-color
+}
+
 // override values from dialog.scss
 .dialogContainer .modal-body {
 	height : 100%;
