--- a/lams_monitoring/web/css/_monitorLesson_base.scss
+++ b/lams_monitoring/web/css/_monitorLesson_base.scss
@@ -387,3 +387,11 @@ td.progressBarLabel {
 	margin-left: 25px;
 	
 }
+
+/***** Group View Page **/
+.group-table>tbody>tr:nth-of-type(odd){
+   background-color:$brand-primary-light;
+}
+.group-table>tbody>tr>td, .table>tfoot>tr>td {
+    border-top: none;
+}
