LDEV-4476: Monitor can change the scheduled start date.

--- a/lams_monitoring/web/css/_monitorLesson_base.scss
+++ b/lams_monitoring/web/css/_monitorLesson_base.scss
@@ -177,6 +177,11 @@ td.sectionHeader {
 	margin-right: 5px;
 }
 
+#lessonStateLabel{
+	font-size:13px; // Larger than buttons but smaller than the date text next to it.
+    vertical-align: inherit;
+}
+
 #lessonStateField {
 	width: 114px;
 }
