--- a/lams_central/web/css/purple_learner.scss
+++ b/lams_central/web/css/purple_learner.scss
@@ -4,6 +4,7 @@
 @import url("/lams/includes/font-awesome/css/font-awesome.min.css");
 @import url("/lams/css/bootstrap.min.css");
 // LAMS Classes and overrides
+@import "_dialogs.scss";
 @import "_inlineeditor.scss";
 @import "_learner_base.scss";
 
