LDEV-4510 Small authoring template UI tweaks
Minimise/Grow buttons, scroll to new fields and number of groups
defaults to 2.

--- a/lams_central/web/css/_authoring_base.scss
+++ b/lams_central/web/css/_authoring_base.scss
@@ -545,8 +545,16 @@ td#canvasContainerCell {
     border-radius: 4px;
 }
 
+#rootwizard .nav-pills > li.active > a {
+    background-color: $brand-primary;
+}
+  
 #rootwizard .progress {
     border-radius: 4px;
     box-shadow: none;
     margin-bottom: 10px;
+}
+
+#rootwizard .progress-bar {
+     background-color: $brand-primary;
 }
