--- a/lams_central/web/css/_authoring_base.scss
+++ b/lams_central/web/css/_authoring_base.scss
@@ -152,21 +152,16 @@ input.groupName {
 	width: 95%;
 }
 
-div#infoDialog {
-	cursor: pointer;
-}
-
 div#infoDialog .modal-content {
-	border-color: $brand-primary-darker;
-}
-
-div#infoDialog .close {
-	display : none;
 }
 
 div#infoDialog .modal-header {
-	text-align: center;
-	color: $brand-primary-darker;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+div#infoDialog .modal-header .close {
+	opacity: 1;
 }
 
 div#infoDialog .modal-body {
@@ -174,6 +169,17 @@ div#infoDialog .modal-body {
 	padding: 5px;
 }
 
+div#infoDialog .infoDialogBody.fade {
+	cursor: pointer;
+}
+
+div#infoDialog #infoDialogButtons {
+	height: 35px;
+}
+
+div#infoDialog #infoDialogOKButton {
+	width: 40%;
+}
 
 div.exportDialog {
 	text-align: center;
