LDEV-4518 Add "temporary" mode of info dialog without buttons

--- a/lams_central/web/css/_authoring_base.scss
+++ b/lams_central/web/css/_authoring_base.scss
@@ -169,7 +169,7 @@ div#infoDialog .modal-body {
 	padding: 5px;
 }
 
-div#infoDialog .infoDialogBody.fade {
+div#infoDialog #infoDialogBody.temporary {
 	cursor: pointer;
 }
 
