LDEV-4539 Monitor can preview results emails before being sent.

--- a/lams_tool_preview/web/includes/css/learning.scss
+++ b/lams_tool_preview/web/includes/css/learning.scss
@@ -75,4 +75,5 @@ textarea {
 }
 .email-button {
 	margin: 2px;
+	font-size: $font-size-small !important; // force it to be small or the jqgrid setting will override
 }
