LDEV-4540 Disclose answers in TBL monitor and reflect it in learner

--- a/lams_monitoring/web/css/tblmonitor.scss
+++ b/lams_monitoring/web/css/tblmonitor.scss
@@ -397,3 +397,7 @@ div#sequenceCanvas svg {
 .burning-question-description div, .burning-question-count {
 	display: inline; 
 }
+
+.disclose-button-group {
+	margin-top: -2px;
+}
