LDEV-4540 Add "disclose all" buttons to TBL monitor

--- a/lams_monitoring/web/css/tblmonitor.scss
+++ b/lams_monitoring/web/css/tblmonitor.scss
@@ -401,3 +401,7 @@ div#sequenceCanvas svg {
 .disclose-button-group {
 	margin-top: -2px;
 }
+
+.disclose-all-button-group {
+	margin-bottom: 10px;
+}
