LDEV-4569 TBL UI: adjustments
minor adjustments to .courses-title

--- a/lams_monitoring/web/css/_tblmonitor_base.scss
+++ b/lams_monitoring/web/css/_tblmonitor_base.scss
@@ -75,6 +75,8 @@ table.tablesorter {
 .courses-title {
     padding-left: 0;
     word-break: break-all;
+    line-height: 10px;
+    font-size: 19px;
 }
 
 .offcanvas-header {
