LDEV-4559 Students can post anonymously in Forum

--- a/lams_central/web/css/_learner_base.scss
+++ b/lams_central/web/css/_learner_base.scss
@@ -207,6 +207,12 @@ a:focus {
 .msg .panel-footer {
   font-size: $font-size-small;
 }
+
+.msg .checkbox {
+	margin-top: 0px;
+    margin-bottom: 0px;
+}
+   
 .panel-heading-sm {
   padding: 3px 5px;
   font-size: smaller;
