LDEV-4559 Comments can be left anonymously.

--- a/lams_central/web/css/_learner_base.scss
+++ b/lams_central/web/css/_learner_base.scss
@@ -212,6 +212,11 @@ a:focus {
 	margin-top: 0px;
     margin-bottom: 0px;
 }
+
+.comment-entry .checkbox {
+	margin-top: 5px;
+    margin-bottom: 0px;
+}
    
 .panel-heading-sm {
   padding: 3px 5px;
