--- a/lams_central/conf/scss/_lams_variables.scss
+++ b/lams_central/conf/scss/_lams_variables.scss
@@ -97,4 +97,11 @@ $portrait-color-4:#3D9970;
 $portrait-color-5:#0074D9;
 $portrait-color-6:#FF4136;
 
+// Canvas background svg:
+// <svg xmlns='http://www.w3.org/2000/svg' width='20' height='20'>
+//  <rect width='20' height='20' fill='#fefefe'/>
+//  <rect x='10' y='10' width='1.5' height='1.5' fill='#b6b6b6'/>
+// </svg>
+// this has to be url encoded and added to the background below
+$canvas-dot-background: url("data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20width%3D%2720%27%20height%3D%2720%27%3E%0D%0A%20%20%3Crect%20width%3D%2720%27%20height%3D%2720%27%20fill%3D%27%23fefefe%27%2F%3E%0D%0A%3Crect%20x%3D%2710%27%20y%3D%2710%27%20width%3D%271.5%27%20height%3D%271.5%27%20fill%3D%27%23b6b6b6%27%2F%3E%0D%0A%3C%2Fsvg%3E");
 
