LDEV-4569 use jquery toggle instead of bootstrap collapse
By some reason bootstrap collapse doesn't work properly. Involved
links got assigned double amount of click handlers which makes
them appear and then instantaneously disappear again.

--- a/lams_monitoring/web/css/_tblmonitor_base.scss
+++ b/lams_monitoring/web/css/_tblmonitor_base.scss
@@ -349,6 +349,10 @@ i.fa.fa-user{
     content:"\f13a";
 }
 
+.burning-question-title {
+   	cursor: pointer;
+}
+
 .table > tbody > tr > td.success,
 .table > tbody > tr > td.warning,
 .table > tbody > tr > td.normal,
