LDEV-4582 Able to add letter prefix to Assessment MCQ Answers

--- a/lams_tool_assessment/web/includes/css/assessment.scss
+++ b/lams_tool_assessment/web/includes/css/assessment.scss
@@ -49,6 +49,14 @@ div.growlUI h1, div.growlUI h2 {
 	padding:5px 0px 2px 15px; 
 	width: 5px;
 }
+.has-radio-button-prefix {
+	padding:5px 0px 5px 5px !important; 
+	width: 45px;
+}
+.has-radio-button-prefix-answer {
+	padding-left:0px !important; 
+}
+
 .complete-item-gif {
 	padding:5px 0px 2px 15px; 
 	width: 7px;
