LDEV-4587 Distinguish ordered branching by introducing a new field
The fields tells whether branching should start from highest ordered
answer (asc, true) or lowest (desc, false) or is it a plain, non-ordered
tool-based branching (null).

--- a/lams_central/web/css/_authoring_base.scss
+++ b/lams_central/web/css/_authoring_base.scss
@@ -344,6 +344,11 @@ div.branchMappingDialog td.branchMappingListCell div {
 	cursor: pointer;
 }
 
+div.branchMappingDialog #branchMappingOrderedRow td {
+	text-align: left;
+	padding-top: 5px;
+}
+
 div#outputConditionsDialogContents div#complexConditions > div {
 	font-weight: bold;
 	margin: 10px 0 0 2px;
