--- a/lams_tool_mindmap/web/includes/css/mindmap.scss
+++ b/lams_tool_mindmap/web/includes/css/mindmap.scss
@@ -11,3 +11,16 @@
 	width: 100%;
 	border: $border-thin-solid;
 }	
+
+// Override the default mapjs styles
+.mapjs-node .mapjs-label {
+	background: white;
+	opacity: 0.5;
+	color: white;
+	display: inline-block;
+	font-size: $font-size-small;
+}
+
+.mapjs-node:hover .mapjs-label {
+	color: black;
+}
