--- a/lams_monitoring/web/css/timer.scss
+++ b/lams_monitoring/web/css/timer.scss
@@ -8,26 +8,30 @@
 	width: 80px;
 	font-size: $font-size-base;
 }	
-}
-
 #hours, #minutes, #seconds {
 	width:70px;
+}
 }
 
 @media (min-width: 501px) {
 * {
-	font-size: x-large;
+	font-size: xx-large;
 }
 
 .fixed-button-width {
 	 width: 120px;
-	font-size: large;
+	font-size: x-large;
 }	
+#hours, #minutes, #seconds {
+	width:auto;
+	font-size: x-large;
+}
+
 }
 
 .is-countdown {
 	border: none;
-    background-color: inherit;
+    background-color: $body-bg;
 }
 
 .countdown-row-replacement-text, .countdown-row {
@@ -51,3 +55,70 @@
 #progressBarDiv #nprogress .bar{
 	height:10px;
 }
+
+@mixin fullPageContentDivDefn() {
+	width: 100%;
+	height: 100vh;
+	background-color: $body-bg;
+	display: flex;
+	align-items: center;
+}
+
+@mixin flexDivDefn() {
+    margin-left: 5%;
+    margin-right: 5%;
+    display: block;
+}
+
+@mixin mainDivDefn() {
+	width: 90vw;
+}
+
+#fullPageContentDiv:-webkit-full-screen {
+  @include fullPageContentDivDefn;
+}
+
+#fullPageContentDiv:-webkit-full-screen #flexDiv {
+  @include flexDivDefn;
+}
+
+#fullPageContentDiv:-webkit-full-screen #mainDiv {
+  @include mainDivDefn;
+}
+
+#fullPageContentDiv:-moz-full-screen {
+  @include fullPageContentDivDefn;
+}
+
+#fullPageContentDiv:-moz-full-screen  #flexDiv {
+  @include flexDivDefn;
+}
+
+#fullPageContentDiv:-moz-full-screen #mainDiv {
+  @include mainDivDefn;
+}
+
+#fullPageContentDiv:-ms-fullscreen {
+  @include fullPageContentDivDefn;
+}
+
+#fullPageContentDiv:-ms-fullscreen  #flexDiv {
+  @include flexDivDefn;
+}
+
+#fullPageContentDiv:-ms-full-screen #mainDiv {
+  @include mainDivDefn;
+}
+
+#fullPageContentDiv:fullscreen {
+  @include fullPageContentDivDefn;
+}
+
+#fullPageContentDiv:fullscreen #flexDiv {
+  @include flexDivDefn;
+}
+
+#fullPageContentDiv:fullscreen #mainDiv {
+  @include mainDivDefn;
+}
+
