LDEV-4601 Schedule the end date when teacher creates a lesson.

--- a/lams_central/web/css/addLesson.scss
+++ b/lams_central/web/css/addLesson.scss
@@ -184,8 +184,8 @@ span#splitLearnersDescription {
 	margin-bottom: 15px;
 }
 
-#schedulingDatetimeField {
-	margin: 0px 0px 10px 50px;
+
+#scheduleStartTime, #scheduleEndTime, #schedulingError, #timelimitError {
 	display: none;
 }
 
