--- a/lams_monitoring/web/css/_monitorLesson_base.scss
+++ b/lams_monitoring/web/css/_monitorLesson_base.scss
@@ -177,7 +177,19 @@ td.sectionHeader {
 	margin-right: 5px;
 }
 
-#lessonStateLabel{
+#disableLessonButton {
+	display: none;
+}
+
+#lessonScheduler label {
+	margin-top: 5px;
+}
+
+#lessonStartApply {
+	margin-bottom: 5px;
+}
+
+#lessonStateLabel, #lessonScheduler input {
 	font-size:13px; // Larger than buttons but smaller than the date text next to it.
 }
 
