LDEV-4612 Mindmap has full screen mode.

--- a/lams_tool_mindmap/web/includes/css/mindmap.scss
+++ b/lams_tool_mindmap/web/includes/css/mindmap.scss
@@ -7,10 +7,23 @@
 
 #mindmap-container {
 	background-color: $body-bg;
-	height: calc(100vh - 400px);
+	height: calc(100vh - 240px);
 	width: 100%;
 	border: $border-thin-solid;
 }	
+
+#fullPageContentDiv:-webkit-full-screen #mindmap-container {
+ 	height: calc(100vh - 150px);
+}
+#fullPageContentDiv:-moz-full-screen  #mindmap-container {
+ 	height: calc(100vh - 150px);
+}
+#fullPageContentDiv:-ms-fullscreen  #mindmap-container {
+ 	height: calc(100vh - 150px);
+}
+#fullPageContentDiv:fullscreen #mindmap-container {
+ 	height: calc(100vh - 150px);
+}
 
 // Override the default mapjs styles
 .mapjs-node .mapjs-label {
@@ -24,3 +37,4 @@
 .mapjs-node:hover .mapjs-label {
 	color: black;
 }
+
