--- a/lams_monitoring/web/css/_tblmonitor_base.scss
+++ b/lams_monitoring/web/css/_tblmonitor_base.scss
@@ -386,6 +386,20 @@ div#sequenceCanvas svg {
 	background-color: $brand-success;
 } 
 
+span.user-response {
+	padding: 1px 3px;
+    color: white;
+    border-radius: 3px;
+} 
+
+span.successful-response {
+	background-color: $brand-success;
+} 
+
+span.wrong-response {
+	background-color: $brand-danger;
+} 
+
 #closeBranchingButton {
 	font-weight: inherit !important;
 	margin-left: 7px;
