LDEV-4636 Use lock icon to depict read-only status

--- a/lams_central/web/css/_authoring_base.scss
+++ b/lams_central/web/css/_authoring_base.scss
@@ -230,8 +230,8 @@ div#ldStoreDialogContents div#ldStoreDialogTree {
 	overflow: auto;
 }
 
-div#ldStoreDialogContents div#ldStoreDialogTree .readOnly {
-	font-style: italic;
+div#ldStoreDialogContents div#ldStoreDialogTree .ygtvhtml .fa-lock {
+	color: red;
 }
 
 div#ldStoreDialogContents #ldStoreDialogAccessCell {
