LDEV-4636 Minor fixes in read-only feature

--- a/lams_central/web/css/_authoring_base.scss
+++ b/lams_central/web/css/_authoring_base.scss
@@ -230,6 +230,10 @@ div#ldStoreDialogContents div#ldStoreDialogTree {
 	overflow: auto;
 }
 
+div#ldStoreDialogContents div#ldStoreDialogTree .ygtvhtml {
+	cursor: pointer;
+}
+
 div#ldStoreDialogContents div#ldStoreDialogTree .ygtvhtml .fa-lock {
 	color: red;
 }
