LDEV-4534 Ability to rename lesson title

--- a/lams_monitoring/web/css/_monitorLesson_base.scss
+++ b/lams_monitoring/web/css/_monitorLesson_base.scss
@@ -429,3 +429,33 @@ td.progressBarLabel {
 .group-table>tbody>tr>td, .table>tfoot>tr>td {
     border-top: none;
 }
+
+/********** RENAME LESSON FEATURE **********/
+
+/* Overwrite gliphicon class used by x-editable.js*/
+.glyphicon{
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.glyphicon-ok:before { 
+	content: "\f00c"; 
+}
+.glyphicon-remove:before { 
+	content: "\f00d"; 
+}
+/* Overwrite properties set in x-editable.css*/
+.editable-click, a.editable-click, a.editable-click:hover {
+    border-bottom: none;
+}
+
+/* when item is editable - show pencil icon on hover */
+#lesson-name-strong:hover +span+ i {  /* when link is hovered select i */
+	visibility: visible;
+}
+#lesson-name-strong +span+ i { /* in all other case hide it */
+	visibility: hidden;
+}
