--- a/lams_central/web/css/outcome.scss
+++ b/lams_central/web/css/outcome.scss
@@ -14,6 +14,11 @@ div#titleDiv {
 	height: 16px;
 }
 
+#exportButton {
+	float: left;
+	margin: 20px 0 10px 10px;
+}
+
 #addButton {
 	float: right;
 	margin: 20px 10px 10px 0;
