LDEV-4714 Make arrows spin when loading LD thumbnail in authoring

--- a/lams_central/web/css/_authoring_base.scss
+++ b/lams_central/web/css/_authoring_base.scss
@@ -46,7 +46,7 @@ a.ygtvspacer {
 	cursor: move;
 }
 
-div.dialogContents, #ldScreenshotAuthor, #ldScreenshotLoading {
+div.dialogContents, #ldScreenshotAuthor {
 	display: none;
 }
 
