LDEV-4738 Long lesson desc is hidden until user requests full desc

--- a/lams_monitoring/web/css/_monitorLesson_base.scss
+++ b/lams_monitoring/web/css/_monitorLesson_base.scss
@@ -299,6 +299,10 @@ td.contributeEntryCell a {
 }
 }
 
+#lessonDetails #description {
+	overflow: hidden;
+}
+
 /********** SEQUENCE TAB STYLES **********/
 div#sequenceCanvas {
 	text-align: center;
