LDEV-4742 Match Groups to Branches dialog body is now shown

--- a/lams_central/web/css/_authoring_base.scss
+++ b/lams_central/web/css/_authoring_base.scss
@@ -314,6 +314,7 @@ div#ldStoreDialogContents #ldStoreDialogNameContainer input {
 div.branchMappingDialog {
 	margin-left: 10px;
 	margin-right: 10px;
+	display: block; // override the none for dialogContents
 }
 
 div.branchMappingDialog .container-fluid {
