--- a/lams_tool_assessment/web/includes/css/addQuestion.scss
+++ b/lams_tool_assessment/web/includes/css/addQuestion.scss
@@ -34,6 +34,9 @@ table.alternative-color td {
 .greyed-out-label {
 	opacity: 0.55;
 }
+#hasOptionFilled-error {
+	display: table;
+}
 
 /* overwriting bootstrap value. */
 .panel {
@@ -41,6 +44,12 @@ table.alternative-color td {
 }
 .panel-default>.panel-heading {
 	border-color: transparent;
+}
+#unitArea .table>tbody>tr>td {
+    border-top: none;
+}
+label.alert {
+	display: initial;
 }
 .input-xs {
   height: 22px;
@@ -162,7 +171,7 @@ footer {
     bottom: 0;
     width: 100%;
     height: 44px;
-    background-color: #f5f5f5;
+    background-color: #f9f9f9;
 }
 footer > div {
 	height: 44px;
